move opensearch tests to assertj