@@ -3,7 +3,6 @@ package de.komoot.photon.opensearch;
 import de.komoot.photon.ESBaseTester;
 import de.komoot.photon.Importer;
 import de.komoot.photon.PhotonDoc;
-import de.komoot.photon.searcher.PhotonResult;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -13,12 +12,12 @@ import org.locationtech.jts.io.WKTReader;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
-import static org.junit.jupiter.api.Assertions.*;
 import static org.assertj.core.api.Assertions.*;
+import static de.komoot.photon.PhotonResultAssert.*;
 
 class ImporterTest extends ESBaseTester {
 
@@ -30,24 +29,17 @@ class ImporterTest extends ESBaseTester {
 
     @Test
     void testAddSimpleDoc() throws ParseException {
-        Importer instance = makeImporter();
-
-        instance.add(List.of(
+        setupDocs(
                 new PhotonDoc("1234", "N", 1000, "place", "city")
                         .geometry(new WKTReader().read("MULTIPOLYGON (((6.111933 51.2659309, 6.1119417 51.2659247, 6.1119554 51.2659249, 6.1119868 51.2659432, 6.111964 51.2659591, 6.1119333 51.2659391, 6.111933 51.2659309)))"))
-                        .extraTags(Collections.singletonMap("maxspeed", "100"))));
-        instance.finish();
+                        .extraTags(Collections.singletonMap("maxspeed", "100")));
 
-        PhotonResult response = getById(1234);
-
-        assertNotNull(response);
-
-        assertEquals("N", response.get("osm_type"));
-        assertEquals(1000, response.get("osm_id"));
-        assertEquals("place", response.get("osm_key"));
-        assertEquals("city", response.get("osm_value"));
-
-        assertNull(response.get("extra"));
+        assertThat(getById(1234)).isNotNull()
+                .hasFieldValue(DocFields.OSM_TYPE, "N")
+                .hasFieldValue(DocFields.OSM_ID, 1000)
+                .hasFieldValue(DocFields.OSM_KEY, "place")
+                .hasFieldValue(DocFields.OSM_VALUE, "city")
+                .hasNoField(DocFields.EXTRA);
     }
 
     @Test
@@ -59,59 +51,41 @@ class ImporterTest extends ESBaseTester {
                 new PhotonDoc("4432", "N", 100, "building", "yes").houseNumber("35")));
         instance.finish();
 
-        PhotonResult response = getById("4432");
+        assertThat(getById("4432")).isNotNull()
+                .hasFieldValue(DocFields.OSM_TYPE, "N")
+                .hasFieldValue(DocFields.OSM_ID, 100)
+                .hasFieldValue(DocFields.OSM_KEY, "building")
+                .hasFieldValue(DocFields.OSM_VALUE, "yes")
+                .hasFieldValue(DocFields.HOUSENUMBER, "34");
 
-        assertNotNull(response);
-
-        assertEquals("N", response.get("osm_type"));
-        assertEquals(100, response.get("osm_id"));
-        assertEquals("building", response.get("osm_key"));
-        assertEquals("yes", response.get("osm_value"));
-        assertEquals("34", response.get("housenumber"));
-
-        response = getById("4432.1");
-
-        assertNotNull(response);
-
-        assertEquals("N", response.get("osm_type"));
-        assertEquals(100, response.get("osm_id"));
-        assertEquals("building", response.get("osm_key"));
-        assertEquals("yes", response.get("osm_value"));
-        assertEquals("35", response.get("housenumber"));
+        assertThat(getById("4432.1")).isNotNull()
+                .hasFieldValue(DocFields.OSM_TYPE, "N")
+                .hasFieldValue(DocFields.OSM_ID, 100)
+                .hasFieldValue(DocFields.OSM_KEY, "building")
+                .hasFieldValue(DocFields.OSM_VALUE, "yes")
+                .hasFieldValue(DocFields.HOUSENUMBER, "35");
     }
 
     @Test
     void testSelectedExtraTagsCanBeIncluded() {
         getProperties().setExtraTags(List.of("maxspeed", "website"));
-        Importer instance = makeImporter();
 
-        Map<String, Object> extratags = new HashMap<>();
-        extratags.put("website", "foo");
-        extratags.put("maxspeed", 100);
-        extratags.put("source", List.of("survey", "aerial"));
-
-        instance.add(List.of(
+        setupDocs(
                 new PhotonDoc("1234", "N", 1000, "place", "city")
-                        .extraTags(extratags)));
-        instance.add(List.of(
+                        .extraTags(Map.of(
+                                "website", "foo",
+                                "maxspeed", 100,
+                                "source", List.of("survey", "aerial")
+                        )),
                 new PhotonDoc("1235", "N", 1001, "place", "city")
-                        .extraTags(Collections.singletonMap("wikidata", "100"))));
-        instance.finish();
+                        .extraTags(Map.of("wikidata", "100"))
+        );
 
-        PhotonResult response = getById(1234);
-        assertNotNull(response);
+        assertThat(getById(1234)).isNotNull()
+                .hasFieldValue(DocFields.EXTRA, Map.of("maxspeed", 100, "website", "foo"));
 
-        var extra = (Map<String, String>) response.get("extra");
-        assertNotNull(extra);
-
-        assertEquals(2, extra.size());
-        assertEquals(100, extra.get("maxspeed"));
-        assertEquals("foo", extra.get("website"));
-
-        response = getById(1235);
-        assertNotNull(response);
-
-        assertNull(response.get("extra"));
+        assertThat(getById(1235)).isNotNull()
+                        .hasNoField(DocFields.EXTRA);
     }
 
     @Test
@@ -141,7 +115,7 @@ class ImporterTest extends ESBaseTester {
         instance.finish();
 
         assertThat(getAll())
-                .extracting(p -> p.get("osm_id"))
+                .extracting(p -> Objects.requireNonNull(p.get(DocFields.OSM_ID)))
                 .containsExactlyInAnyOrder(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
     }
 }
